<resources>
    <string name="app_name">Playlist maker</string>
    <string name="search">Поиск</string>
    <string name="media_library">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="dark_theme">Темная тема</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="support">Написать в поддержку</string>
    <string name="user_agreement">Пользовательское соглашение</string>

    <string name="share_app_text">Посмотри курс Android-разработчика на Практикуме: https://practicum.yandex.ru/android-developer/</string>
    <string name="support_email">h4kushu@yandex.ru</string>
    <string name="support_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="support_body">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="user_agreement_url">https://yandex.ru/legal/practicum_offer/ru/</string>

    <string name="search_hint">Поиск</string>
    <string name="clear_search">Очистить поисковый запрос</string>

    <string name="start_search">Введите запрос для поиска</string>
    <string name="nothing_found">Ничего не нашлось</string>
    <string name="connection_error">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="retry">Обновить</string>

    <string name="search_history_title">Вы искали</string>
    <string name="clear_history">Очистить историю</string>

    <string name="back">Назад</string>
    <string name="add_to_playlist">Добавить в плейлист</string>
    <string name="add_to_favorites">Добавить в избранное</string>
    <string name="play_pause">Воспроизведение/Пауза</string>
    <string name="album">Альбом</string>
    <string name="year">Год</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>
    <string name="duration">Длительность</string>
</resources>