<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/main_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/header_height"
        android:gravity="center_vertical"
        android:paddingStart="@dimen/spacing_16">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="22sp"
            android:textStyle="normal"
            android:textColor="@color/header_text" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="@dimen/spacing_16">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/search_button"
            style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_margin="@dimen/button_margin"
            android:text="@string/search"
            android:textSize="22sp"
            android:textStyle="bold"
            android:textAllCaps="false"
            app:icon="@drawable/ic_search_24"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/icon_padding"
            app:iconTint="@color/black"
            app:cornerRadius="@dimen/corner_radius"
            android:backgroundTint="@color/button_background"
            android:textColor="@color/black"
            android:stateListAnimator="@null" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/media_library_button"
            style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_margin="@dimen/button_margin"
            android:text="@string/media_library"
            android:textSize="22sp"
            android:textStyle="bold"
            android:textAllCaps="false"
            app:icon="@drawable/ic_library_24"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/icon_padding"
            app:iconTint="@color/black"
            app:cornerRadius="@dimen/corner_radius"
            android:backgroundTint="@color/button_background"
            android:textColor="@color/black"
            android:stateListAnimator="@null" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/settings_button"
            style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_margin="@dimen/button_margin"
            android:text="@string/settings"
            android:textSize="22sp"
            android:textStyle="bold"
            android:textAllCaps="false"
            app:icon="@drawable/ic_settings_24"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/icon_padding"
            app:iconTint="@color/black"
            app:cornerRadius="@dimen/corner_radius"
            android:backgroundTint="@color/button_background"
            android:textColor="@color/black"
            android:stateListAnimator="@null" />

    </LinearLayout>

</LinearLayout>